# hs-web3

./: .gitignore  .hlint.yaml  .stylish_haskell.yaml  .travis.yml  CHANGELOG.md  LICENSE  LICENSE-APACHE2  Makefile  README.md  Setup.hs  package.yaml  stack.yaml  truffle.js  web3.cabal
.github/workflows/: ci.yml  main.yml  testing.yml
cbits/: solidity_lite.cpp
compiler/cbits/: solidity_lite.cpp  solidity_lite.h
contracts/: ComplexStorage.sol  MockERC20.sol
data/: ERC20.hs  sample.json  sample.sol
docs/: Makefile  conf.py  contributing.rst  ens.rst  ethereum_accounts.rst  ethereum_node_api.rst  getting_started.rst  index.rst  ipfs_client_api.rst  polkadot_extrinsic.rst  polkadot_node_api.rst  polkadot_storage.rst  smart_contracts.rst  testing.rst
examples/: ERC20.hs  TokenInfo.hs
examples/erc20/: Main.hs  example-erc20.cabal  package.yaml
examples/polkadot/: Main.hs  example-polkadot.cabal  package.yaml
examples/scale/: Main.hs  example-scale.cabal  package.yaml  stack.yaml
examples/token/: ERC20.hs  Main.hs  package.yaml  stack.yaml
migrations/: 2_deploy_contracts.js
src/Codec/: Scale.hs
src/Codec/Scale/: Base.hs  Class.hs  Compact.hs  Core.hs  Generic.hs  SingletonEnum.hs  Skip.hs  TH.hs
src/Crypto/: Ethereum.hs
src/Crypto/Ecdsa/: Signature.hs  Utils.hs
src/Crypto/Ethereum/: Keyfile.hs  Signature.hs  Utils.hs
src/Crypto/Random/: HmacDrbg.hs
src/Data/: HexString.hs
src/Data/ByteArray/: HexString.hs
src/Data/Solidity/: Abi.hs  Event.hs  Prim.hs
src/Data/Solidity/Abi/: Codec.hs  Generic.hs  Json.hs
src/Data/Solidity/Event/: Internal.hs
src/Data/Solidity/Prim/: Address.hs  Bool.hs  Bytes.hs  Int.hs  List.hs  String.hs  Tagged.hs  Tuple.hs
src/Data/Solidity/Prim/Tuple/: TH.hs
src/Data/String/: Extra.hs
src/Language/Solidity/: Abi.hs  Compiler.hs
src/Language/Solidity/Compiler/: Foreign.hsc
src/Network/: Ethereum.hs  Ipfs.hs  Polkadot.hs  Web3.hs
src/Network/Ethereum/: Account.hs  Address.hs  Chain.hs  Contract.hs  ContractABI.hs  ContractAbi.hs  Ens.hs  Transaction.hs  Unit.hs  Units.hs  Web3.hs
src/Network/Ethereum/ABI/: Class.hs  Codec.hs  Event.hs  Generic.hs  Json.hs  Prim.hs
src/Network/Ethereum/ABI/Event/: Internal.hs
src/Network/Ethereum/ABI/Prim/: Address.hs  Bool.hs  Bytes.hs  Int.hs  List.hs  Singleton.hs  String.hs  Tagged.hs  Tuple.hs
src/Network/Ethereum/ABI/Prim/Tuple/: TH.hs
src/Network/Ethereum/Account/: Class.hs  Default.hs  Internal.hs  LocalKey.hs  Personal.hs  PrivateKey.hs  Safe.hs
src/Network/Ethereum/Api/: Eth.hs  Net.hs  Personal.hs  Provider.hs  Shh.hs  Types.hs  Web3.hs
src/Network/Ethereum/Contract/: Event.hs  Method.hs  TH.hs
src/Network/Ethereum/Contract/Event/: .#MultiFilter.hs  .#SingleFilter.hs  Common.hs  MultiFilter.hs  SingleFilter.hs
src/Network/Ethereum/Ens/: PublicResolver.hs  Registry.hs
src/Network/Ethereum/Web3/: API.hs  Address.hs  Api.hs  Bytes.hs  Contract.hs  Encoding.hs  EncodingUtils.hs  Eth.hs  Internal.hs  JsonAbi.hs  JsonRpc.hs  Logging.hs  Monad.hs  Net.hs  Personal.hs  Provider.hs  Shh.hs  TH.hs  Transaction.hs  Types.hs  Util.hs  Web3.hs
src/Network/Ethereum/Web3/Contract/: Streaming.hs
src/Network/Ethereum/Web3/Encoding/: .#Event.hs  Bytes.hs  Event.hs  Generic.hs  Int.hs  Internal.hs  Tuple.hs  TupleTH.hs  Vector.hs
src/Network/Ethereum/Web3/Encoding/Event/: Internal.hs
src/Network/Ipfs/: Client.hs
src/Network/Ipfs/Api/: Api.hs  Bitswap.hs  Block.hs  Bootstrap.hs  Cid.hs  Config.hs  Core.hs  Dag.hs  Dht.hs  Files.hs  Internal.hs  Ipfs.hs  Key.hs  Log.hs  Multipart.hs  Object.hs  Pin.hs  Pubsub.hs  Repo.hs  Stats.hs  Stream.hs  Swarm.hs  Types.hs
src/Network/Ipfs/Api/Internal/: Call.hs  Stream.hs
src/Network/Ipfs/Api/Types/: Stream.hs
src/Network/Ipfs/Tests/: IpfsTests.hs
src/Network/Ipfs/Types/: Multihash.hs
src/Network/JsonRpc/: TinyClient.hs
src/Network/Polkadot/Api/: Account.hs  Author.hs  Babe.hs  Chain.hs  Childstate.hs  Contracts.hs  Engine.hs  Grandpa.hs  Offchain.hs  Payment.hs  Rpc.hs  State.hs  System.hs  Types.hs
src/Network/Web3/: Provider.hs
test/: Spec.hs
test-support/: .gitignore  Makefile  bower.json  chanterelle.json  convertAbi.sh  inject-contract-addresses.sh  package.json
test-support/abis/: ERC20.json
test-support/compile/: Compile.purs
test-support/contracts/: ComplexStorage.sol  Linearization.sol  Registry.sol  SimpleStorage.sol
test-support/src/: ContractConfig.purs  Main.purs
test/Network/Ethereum/Test/: ComplexStorageSpec.hs  ERC20Spec.hs  LinearizationSpec.hs  LocalAccountSpec.hs  RegistrySpec.hs  SimpleStorageSpec.hs  Utils.hs
test/Network/Ethereum/Web3/Test/: ComplexStorage.hs  ComplexStorageSpec.hs  ERC20Spec.hs  EncodingSpec.hs  LagSpec.hs  LinearizationSpec.hs  LocalAccountSpec.hs  RegistrySpec.hs  SimpleStorageSpec.hs  Utils.hs
test/Network/Ipfs/Api/: Key.hs
test/Network/Ipfs/Api/Test/: Key.hs
test/Web3/Test/: ComplexStorageSpec.hs  ERC20Spec.hs  MethodDumpSpec.hs  SimpleStorageSpec.hs  Utils.hs
test/contracts/: ComplexStorage.json  Exchange.json  Linearization.json  Registry.json  SimpleStorage.json
unit/Codec/Scale/Test/: CoreSpec.hs  SingleFieldStructSpec.hs  SkipSpec.hs
unit/Crypto/Ethereum/Test/: EcdsaSpec.hs  SignatureSpec.hs
unit/Crypto/Random/Test/: HmacDrbgSpec.hs
unit/Data/Solidity/Test/: AddressSpec.hs  EncodingSpec.hs  IntSpec.hs
unit/Language/Solidity/Test/: AbiSpec.hs  CompilerSpec.hs
unit/Network/Ethereum/ABI/Prim/Test/: AddressSpec.hs
unit/Network/Ethereum/Contract/Test/: THSpec.hs
unit/Network/Ethereum/Web3/Test/: CompilerSpec.hs  EncodingSpec.hs  EventSpec.hs  LocalAccountSpec.hs  MethodDumpSpec.hs  SignatureSpec.hs
