name:                web3
version:             0.6.0.0
synopsis:            Ethereum API for Haskell
description:         Web3 is a Haskell client library for Ethereum
homepage:            https://github.com/airalab/hs-web3#readme
license:             BSD3
license-file:        LICENSE
author:              Alexander Krupenkin
maintainer:          mail@akru.me
copyright:           Alexander Krupenkin
category:            Network
build-type:          Custom
cabal-version:       >=1.10

extra-source-files:
  README.md
  test-support/contracts/Migrations.sol
  test-support/contracts/SimpleStorage.sol
  test-support/truffle.js
  test-support/migrations/1_initial_migration.js
  test-support/migrations/2_deploy_contracts.js
  test-support/convertAbi.sh
  test-support/inject-contract-addresses.sh

source-repository head
  type:     git
  location: https://github.com/airalab/hs-web3

custom-setup
  setup-depends:
    base,
    Cabal,
    directory

library
  hs-source-dirs:      src
  exposed-modules:     Network.JsonRpc.TinyClient
                     , Network.Ethereum.ABI.Json
                     , Network.Ethereum.ABI.Class
                     , Network.Ethereum.ABI.Codec
                     , Network.Ethereum.ABI.Event
                     , Network.Ethereum.ABI.Event.Internal
                     , Network.Ethereum.ABI.Generic
                     , Network.Ethereum.ABI.Prim.Int
                     , Network.Ethereum.ABI.Prim.Bool
                     , Network.Ethereum.ABI.Prim.List
                     , Network.Ethereum.ABI.Prim.Bytes
                     , Network.Ethereum.ABI.Prim.String
                     , Network.Ethereum.ABI.Prim.Tagged
                     , Network.Ethereum.ABI.Prim.Address
                     , Network.Ethereum.ABI.Prim.Singleton
                     , Network.Ethereum.Contract.TH
                     , Network.Ethereum.Contract.Event
                     , Network.Ethereum.Contract.Method
                     , Network.Ethereum.Unit
                     , Network.Ethereum.Web3.Eth
                     , Network.Ethereum.Web3.Net
                     , Network.Ethereum.Web3.Web3
                     , Network.Ethereum.Web3.Types
                     , Network.Ethereum.Web3.Monad
                     , Network.Ethereum.Web3.Provider
                     , Network.Ethereum.Web3.Internal
  build-depends:       base >4.8 && <4.11
                     , template-haskell
                     , data-default
                     , generics-sop
                     , transformers
                     , http-client
                     , http-client-tls
                     , exceptions
                     , bytestring
                     , cryptonite
                     , basement
                     , machines
                     , tagged
                     , parsec
                     , memory
                     , cereal 
                     , aeson
                     , async
                     , text
                     , mtl
  default-extensions:  OverloadedStrings
  ghc-options:         -Werror
  default-language:    Haskell2010

test-suite unit
  type:                exitcode-stdio-1.0
  hs-source-dirs:      unit
  main-is:             Spec.hs
  other-modules:       Network.Ethereum.Web3.Test.MethodDumpSpec
                       Network.Ethereum.Web3.Test.EncodingSpec
                       Network.Ethereum.Web3.Test.EventSpec
  build-depends:       base >4.8 && <4.11
                     , hspec-expectations
                     , hspec-discover
                     , hspec-contrib
                     , hspec
                     , data-default
                     , generics-sop
                     , transformers
                     , bytestring
                     , memory
                     , tagged
                     , split
                     , time
                     , text
                     , web3
  ghc-options:         -Werror -threaded -rtsopts -with-rtsopts=-N -ddump-splices
  default-extensions:  DataKinds LambdaCase DeriveGeneric QuasiQuotes TemplateHaskell OverloadedStrings ScopedTypeVariables TypeApplications
  default-language:    Haskell2010

test-suite live
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Network.Ethereum.Web3.Test.ComplexStorageSpec
                     , Network.Ethereum.Web3.Test.SimpleStorageSpec
                     , Network.Ethereum.Web3.Test.Utils
  build-depends:       async
                     , base
                     , bytestring
                     , data-default
                     , hspec
                     , hspec-contrib
                     , hspec-discover
                     , hspec-expectations
                     , hspec-discover
                     , hspec-contrib
                     , hspec
                     , transformers
                     , data-default
                     , bytestring
                     , memory
                     , split
                     , text
                     , time
                     , text
                     , web3
                     , stm
  ghc-options:         -Werror -threaded -rtsopts -with-rtsopts=-N -ddump-splices
  default-extensions:  DataKinds LambdaCase DeriveGeneric QuasiQuotes TemplateHaskell OverloadedStrings ScopedTypeVariables TypeApplications
  default-language:    Haskell2010
