name:                web3
version:             0.7.0.0
synopsis:            Ethereum API for Haskell
description:         Web3 is a Haskell client library for Ethereum
homepage:            https://github.com/airalab/hs-web3#readme
license:             BSD3
license-file:        LICENSE
author:              Alexander Krupenkin
maintainer:          mail@akru.me
copyright:           Alexander Krupenkin
category:            Network
build-type:          Custom
cabal-version:       >=1.10

extra-source-files:
  README.md
  CHANGELOG.md
  test-support/contracts/Migrations.sol
  test-support/contracts/SimpleStorage.sol
  test-support/truffle.js
  test-support/migrations/1_initial_migration.js
  test-support/migrations/2_deploy_contracts.js
  test-support/convertAbi.sh
  test-support/inject-contract-addresses.sh
  examples/ERC20.hs
  examples/ERC20.json
  examples/TokenInfo.hs

source-repository head
  type:     git
  location: https://github.com/airalab/hs-web3

custom-setup
  setup-depends:
    base,
    Cabal,
    directory

library
  hs-source-dirs:      src
  exposed-modules:     Network.Ethereum.Web3
                     , Network.Ethereum.Web3.Eth
                     , Network.Ethereum.Web3.Net
                     , Network.Ethereum.Web3.Web3
                     , Network.Ethereum.Web3.Types
                     , Network.Ethereum.Web3.Provider
                     , Network.Ethereum.Unit
                     , Network.Ethereum.ABI.Json
                     , Network.Ethereum.ABI.Class
                     , Network.Ethereum.ABI.Codec
                     , Network.Ethereum.ABI.Event
                     , Network.Ethereum.ABI.Event.Internal
                     , Network.Ethereum.ABI.Generic
                     , Network.Ethereum.ABI.Prim.Int
                     , Network.Ethereum.ABI.Prim.Bool
                     , Network.Ethereum.ABI.Prim.List
                     , Network.Ethereum.ABI.Prim.Bytes
                     , Network.Ethereum.ABI.Prim.Tuple
                     , Network.Ethereum.ABI.Prim.Tuple.TH
                     , Network.Ethereum.ABI.Prim.String
                     , Network.Ethereum.ABI.Prim.Tagged
                     , Network.Ethereum.ABI.Prim.Address
                     , Network.Ethereum.Contract.TH
                     , Network.Ethereum.Contract.Event
                     , Network.Ethereum.Contract.Method
                     , Network.JsonRpc.TinyClient
                     , Data.String.Extra
  build-depends:       base >4.8 && <4.11
                     , template-haskell
                     , data-default
                     , generics-sop
                     , transformers
                     , http-client
                     , http-client-tls
                     , exceptions
                     , bytestring
                     , cryptonite
                     , basement
                     , machines
                     , tagged
                     , parsec
                     , memory
                     , cereal 
                     , aeson
                     , async
                     , text
                     , mtl
  default-language:    Haskell2010
  ghc-options:         -Werror
                       -Wduplicate-exports -Whi-shadowing -Widentities -Wnoncanonical-monoid-instances
                       -Woverlapping-patterns -Wtabs -Wpartial-type-signatures -Wderiving-typeable
                       -Wunrecognised-pragmas -Wunticked-promoted-constructors -Wtyped-holes
                       -Wincomplete-patterns -Wincomplete-uni-patterns -Wmissing-fields -Wmissing-methods
                       -Wmissing-exported-signatures -Wmissing-monadfail-instances -Wmissing-signatures
                       -Wname-shadowing -Wnoncanonical-monad-instances -Wnoncanonical-monadfail-instances
                       -Wunused-binds -Wunused-top-binds -Wunused-local-binds -Wunused-pattern-binds
                       -Wunused-imports -Wunused-matches -Wunused-foralls -Wunused-do-bind -Wwrong-do-bind
                       -Wtrustworthy-safe -Wwarnings-deprecations -Wdeferred-type-errors

test-suite unit
  type:                exitcode-stdio-1.0
  hs-source-dirs:      unit
  main-is:             Spec.hs
  other-modules:       Network.Ethereum.Web3.Test.MethodDumpSpec
                       Network.Ethereum.Web3.Test.EncodingSpec
                       Network.Ethereum.Web3.Test.EventSpec
  build-depends:       base >4.8 && <4.11
                     , hspec-expectations
                     , hspec-discover
                     , hspec-contrib
                     , hspec
                     , data-default
                     , generics-sop
                     , transformers
                     , bytestring
                     , memory
                     , tagged
                     , split
                     , time
                     , text
                     , web3
  ghc-options:         -Werror -threaded -rtsopts -with-rtsopts=-N -ddump-splices
  default-language:    Haskell2010

test-suite live
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Network.Ethereum.Web3.Test.ComplexStorageSpec
                     , Network.Ethereum.Web3.Test.SimpleStorageSpec
                     , Network.Ethereum.Web3.Test.Utils
  build-depends:       async
                     , base
                     , bytestring
                     , data-default
                     , hspec
                     , hspec-contrib
                     , hspec-discover
                     , hspec-expectations
                     , hspec-discover
                     , hspec-contrib
                     , hspec
                     , transformers
                     , data-default
                     , bytestring
                     , memory
                     , split
                     , text
                     , time
                     , text
                     , web3
                     , stm
  ghc-options:         -Werror -threaded -rtsopts -with-rtsopts=-N -ddump-splices
  default-language:    Haskell2010
