name:                web3
version:             0.7.0.0
synopsis:            Ethereum API for Haskell
description:         Web3 is a Haskell client library for Ethereum
homepage:            https://github.com/airalab/hs-web3#readme
license:             BSD3
license-file:        LICENSE
author:              Alexander Krupenkin
maintainer:          mail@akru.me
copyright:           Alexander Krupenkin
category:            Network
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:
  README.md
  CHANGELOG.md
  test-support/contracts/Migrations.sol
  test-support/contracts/SimpleStorage.sol
  test-support/truffle.js
  test-support/migrations/1_initial_migration.js
  test-support/migrations/2_deploy_contracts.js
  test-support/convertAbi.sh
  test-support/inject-contract-addresses.sh
  examples/ERC20.hs
  examples/ERC20.json
  examples/TokenInfo.hs

source-repository head
  type:     git
  location: https://github.com/airalab/hs-web3

flag tls
  description: Enable TLS support
  default: False

library
  hs-source-dirs:      src
  exposed-modules:     Network.Ethereum.Web3
                     , Network.Ethereum.Web3.Eth
                     , Network.Ethereum.Web3.Net
                     , Network.Ethereum.Web3.Web3
                     , Network.Ethereum.Web3.Types
                     , Network.Ethereum.Web3.Provider
                     , Network.Ethereum.Unit
                     , Network.Ethereum.ABI.Json
                     , Network.Ethereum.ABI.Class
                     , Network.Ethereum.ABI.Codec
                     , Network.Ethereum.ABI.Event
                     , Network.Ethereum.ABI.Event.Internal
                     , Network.Ethereum.ABI.Generic
                     , Network.Ethereum.ABI.Prim.Int
                     , Network.Ethereum.ABI.Prim.Bool
                     , Network.Ethereum.ABI.Prim.List
                     , Network.Ethereum.ABI.Prim.Bytes
                     , Network.Ethereum.ABI.Prim.Tuple
                     , Network.Ethereum.ABI.Prim.Tuple.TH
                     , Network.Ethereum.ABI.Prim.String
                     , Network.Ethereum.ABI.Prim.Tagged
                     , Network.Ethereum.ABI.Prim.Address
                     , Network.Ethereum.Contract.TH
                     , Network.Ethereum.Contract.Event
                     , Network.Ethereum.Contract.Method
                     , Network.JsonRpc.TinyClient
                     , Data.String.Extra
  build-depends:       base                 >4.9       && <4.12
                     , template-haskell     >=2.12.0.0 && <2.14
                     , data-default         >=0.7.1.1  && <0.8
                     , generics-sop         >=0.3.2.0  && <0.4
                     , transformers         >=0.5.2.0  && <0.6
                     , http-client          >=0.5.12.1 && <0.6
                     , exceptions           >=0.8.3    && <0.9
                     , bytestring           >=0.10.8.2 && <0.11
                     , cryptonite           ==0.25.*
                     , basement             >=0.0.7    && <0.1
                     , machines             >=0.6.3    && <0.7
                     , tagged               >=0.8.5    && <0.9
                     , parsec               >=3.1.13.0 && <3.2
                     , memory               >=0.14.16  && <0.15
                     , cereal               >=0.5.5.0  && <0.6
                     , aeson                >=1.2.4.0  && <1.3
                     , async                >=2.1.1.1  && <2.3
                     , text                 >=1.2.3.0  && <1.3
                     , mtl                  >=2.2.2    && <2.3

  if flag(tls)
    build-depends:     http-client-tls      >=0.3.5.3   && <0.4
    cpp-options:       -DTLS_MANAGER

  default-language:    Haskell2010
  ghc-options:         -Wduplicate-exports -Whi-shadowing -Widentities -Wnoncanonical-monoid-instances
                       -Woverlapping-patterns -Wtabs -Wpartial-type-signatures -Wderiving-typeable
                       -Wunrecognised-pragmas -Wunticked-promoted-constructors -Wtyped-holes
                       -Wincomplete-patterns -Wincomplete-uni-patterns -Wmissing-fields -Wmissing-methods
                       -Wmissing-exported-signatures -Wmissing-monadfail-instances -Wmissing-signatures
                       -Wname-shadowing -Wnoncanonical-monad-instances -Wnoncanonical-monadfail-instances
                       -Wunused-binds -Wunused-top-binds -Wunused-local-binds -Wunused-pattern-binds
                       -Wunused-imports -Wunused-matches -Wunused-foralls -Wunused-do-bind -Wwrong-do-bind
                       -Wtrustworthy-safe -Wwarnings-deprecations -Wdeferred-type-errors

test-suite unit
  type:                exitcode-stdio-1.0
  hs-source-dirs:      unit
  main-is:             Spec.hs
  other-modules:       Network.Ethereum.Web3.Test.MethodDumpSpec
                       Network.Ethereum.Web3.Test.EncodingSpec
                       Network.Ethereum.Web3.Test.EventSpec
  build-depends:       base                 >4.9       && <4.12
                     , hspec-expectations   >=0.8.2    && <0.9
                     , hspec-discover       >=2.4.8    && <2.6
                     , hspec-contrib        >=0.4.0    && <0.6
                     , hspec                >=2.4.8    && <2.6
                     , data-default         >=0.7.1.1  && <0.8
                     , generics-sop         >=0.3.2.0  && <0.4
                     , transformers         >=0.5.2.0  && <0.6
                     , bytestring           >=0.10.8.2 && <0.11
                     , memory               >=0.14.16  && <0.15
                     , tagged               >=0.8.5    && <0.9
                     , split                >=0.2.3.3  && <0.3
                     , time                 >=1.8.0.2  && <1.9
                     , text                 >=1.2.3.0  && <1.3
                     , web3
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite live
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Network.Ethereum.Web3.Test.ComplexStorageSpec
                     , Network.Ethereum.Web3.Test.SimpleStorageSpec
                     , Network.Ethereum.Web3.Test.Utils
  build-depends:       base                 >4.9       && <4.12
                     , hspec-expectations   >=0.8.2    && <0.9
                     , hspec-discover       >=2.4.8    && <2.6
                     , hspec-contrib        >=0.4.0    && <0.6
                     , hspec                >=2.4.8    && <2.6
                     , transformers         >=0.5.2.0  && <0.6
                     , data-default         >=0.7.1.1  && <0.8
                     , bytestring           >=0.10.8.2 && <0.11
                     , memory               >=0.14.16  && <0.15
                     , tagged               >=0.8.5    && <0.9
                     , split                >=0.2.3.3  && <0.3
                     , async                >=2.1.1.1  && <2.3
                     , time                 >=1.8.0.2  && <1.9
                     , text                 >=1.2.3.0  && <1.3
                     , stm                  >=2.4.5.0  && <2.5
                     , web3
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
